kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-manager
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: food-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: food-manager
    spec:
      containers:
        - name: food-manager
          image: ${CONTAINER_IMAGE_TAGGED}
          resources: {}

---
apiVersion: v1
kind: Service
metadata:
  name: food-manager
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: food-manager
  ports:
    - port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: food-manager
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Food manager
    gethomepage.dev/icon: mdi-food
    gethomepage.dev/group: 1P
spec:
  hostnames:
    - food.home.maximemoreillon.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: food-manager
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
